# drift-bot

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
migration/: env.py
migration/versions/: 2025_06_16_1809-28c25cad9ff6_initial_revision.py  2025_06_26_1851-21a2dfa42520_initial_revision.py  2025_06_26_1932-e4432ecb7a66_remove_referrals_relation.py  2025_06_26_1937-d9a5afe0275c_remove_argumants.py
src/drift_bot/: chain.py  constants.py  decorators.py  ioc.py  schemas.py  settings.py  templates.py  utils.py  verification.py
src/drift_bot/bot/: __init__.py  bot.py  calendar_kb.py  callbacks.py  constants.py  decorators.py  dispatcher.py  enums.py  filters.py  handlers.py  keyboards.py  states.py  types.py  utils.py
src/drift_bot/bot/handlers/: __init__.py  championships.py  competitions.py  events.py  judges.py  stages.py  start.py
src/drift_bot/bot/routers/: __init__.py  championships.py  judges.py  stages.py  start.py
src/drift_bot/bot/routers/admin/: __init__.py  championship_actions.py  championship_form.py  stage_actions.py  stage_form.py
src/drift_bot/bot/routers/championships/: __init__.py  admin_actions.py  form.py  menu.py
src/drift_bot/bot/routers/judjes/: __init__.py  registration_form.py
src/drift_bot/bot/routers/pilots/: __init__.py  (+1 more)
src/drift_bot/core/: base.py  domain.py  dto.py  enums.py  exceptions.py  services.py  use_cases.py
src/drift_bot/database/: models.py
src/drift_bot/infrastructure/: s3.py  telegram.py
src/drift_bot/infrastructure/database/: models.py  session.py  utils.py
(+11 files in other folders)
