[project]
name = "driftbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=2.23.0",
    "aiogram>=3.20.0.post0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi[all]>=0.115.14",
    "sqlalchemy>=2.0.41",
]
